[project]
name = "autodl"
version = "0.1.0"
description = "AutoDL.com client"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[project.scripts]
autodl = "autodl.cli:main"

[build-system]
requires = ["uv-build>=0.11.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
